Revert fixedMenu() called once + fix CSS responsive overflow on body

--- a/assets/themes/FlatSIS/css/zresponsive.css
+++ b/assets/themes/FlatSIS/css/zresponsive.css
@@ -76,11 +76,6 @@
 		padding: 0 5px;
 		box-sizing: border-box;
 	}
-	#menu + #body {
-		padding-top: 0;
-		height: 100%;
-		overflow: scroll;
-	}
 	.header1 h2 {
 		font-size: 24px;
 		line-height: 26px;
